# BlenderNEURON

./: .codecov.yml  .coveragerc  .gitignore  .travis.yml  CNAME  Makefile  README.md  README.txt  _config.yml  build.sh  codecov.yml  conf.py  coverage.sh  makedocs.sh  pyproject.toml  setup.py  test.sh  test_with_coverage.py
.circleci/: config.yaml  config.yml
ForBlender/: addon.py  blenderTestScript.py  build.txt  buildzip.sh  colors.py  neuroserver.py  neuroserver.pyx  setup.py
ForNEURON/: BlenderNEURON.hoc  blenderneuron.py  build.txt  buildzip.sh  setup.py
blenderneuron/: BlenderNEURON.hoc  __init__.py  activity.py  commnode.py  config.json  config.py  neuronnode.py  neuronstart.py  rootgroup.py  section.py  segment3d.py  utils.py
docs/: .buildinfo  Makefile  api.html  blenderneuron.blender.html  blenderneuron.html  blenderneuron.nrn.html  building.html  client.html  genindex.html  getting-started.html  gui.html  index.html  installation.html  introduction.html  objects.inv  py-modindex.html  python.html  readme.txt  reference.blender.html  reference.html  reference.nrn.html  requirements.html  search.html  searchindex.js  server.html
doctrees/: environment.pickle  index.doctree
images/: logo-dark.pdn  logo.pdn
scripts/: Dockerfile  build.sh  dev_readme.md  enable_addon.py  install_blender.py  install_blender_and_addon.py  install_enable_addon.py  install_neuron.sh  link_addon.sh  run.sh  start_vnc.sh
tests/: README.md  TestCell.hoc  __init__.py  test_CommNode.py  test_blender_node.py  test_cell_import_export.py  test_client.py  test_coverage.py  (+6 more)
(+143 files in other folders)
